<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_toLeftOf="@+id/button_test"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/Start" />

    <Button
        android:id="@+id/button_test"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/Test" />

    <!-- android:src="@drawable/ic_menu_refresh" -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_start"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/myDeviceID"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewOx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/hexx"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/tagID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewOx"
        android:layout_alignBottom="@+id/textViewOx"
        android:layout_toRightOf="@+id/textViewOx"
        android:digits="0123456789abcdefABCDEF"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/textViewWiFi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewOx"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/hexx"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/textViewWiFi"
        android:layout_marginTop="46dp"
        android:gravity="bottom"
        android:textColor="@color/greenText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>